--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,9 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-  width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
+  flex-direction: column;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -30,14 +30,8 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  width: 100%;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  font-family: sans-serif;
 }
 
 h1 {
